add section Our portfolio

--- a/index.html
+++ b/index.html
@@ -76,6 +76,58 @@
             </ul>
 
         </section>
+        <section>
+            <h2>Our Portfolio</h2>
+            <ul>
+                <li>
+                    <img src="./images/image5.jpg"
+                    width="360"
+                    height="360"
+                    alt="banking-app" />
+                    <h3>Banking App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/image6.jpg"
+                    width="360"
+                    height="360"
+                    alt="Cashless_Payment" />
+                    <h3>Cashless Payment</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/image7.jpg"
+                    width="360"
+                    height="360"
+                    alt="laptop" />
+                    <h3>Meditaion App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/image8.jpg"
+                    width="360"
+                    height="360"
+                    alt="car_while"/>
+                    <h3>Taxi Service</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/image9.jpg"
+                    width="360"
+                    height="360"
+                    alt="phonescreen"/>
+                <h3>Screen Illustrations</h3>
+                <p>Design</p>
+                </li>
+                <li>
+                    <img src="./images/image10.jpg"
+                    width="360"
+                    height="360"
+                    alt="Smilegirl"/>
+                    <h3>Online Courses</h3>
+                    <p>Marketing</p>
+                </li>
+            </ul>
 </main>
 
 <footer>
