--- a/index.html
+++ b/index.html
@@ -4,22 +4,29 @@
     <meta charset="utf-8"/>
     <meta name="description" content="Webstudio Main Page"/>
     <title>Webstudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./css/styles.css" />
+
 </head>
 <body>
 
-    <header>
-        <nav>
-        <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="#studio">Studio</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contacts">Contacts</a></li>
+    <header class="header">
+        <nav class="nav">
+        <a href="./index.html" class="logo">WebStudio</a>
+        <span class="logo-Web">Web</span><span class="logo-studio">studio</span>
+            <ul class="nav-list">
+                <li><a href="#studio" class="nav-link">Studio</a></li>
+                <li><a href="#portfolio"class="nav-link">Portfolio</a></li>
+                <li><a href="#contacts"class="nav-link">Contacts</a></li>
             </ul>
         </nav>
-        <address>
-        <ul>
-               <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <address class="contacts">
+        <ul class="contacts-list">
+               <li> <a href="mailto:info@devstudio.com"class="contact-link">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111"class="contact-link">+11 (000) 111-11-11</a></li>
                 </ul>
                 </address>
     </header>
