--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 
     <header class="header">
         <nav class="nav">
-        <a href="./index.html" class="logo">WebStudio</a>
+        <a href="./index.html" class="logo">
         <span class="logo-Web">Web</span><span class="logo-studio">studio</span>
+        </a>
             <ul class="nav-list">
                 <li><a href="#studio" class="nav-link">Studio</a></li>
                 <li><a href="#portfolio"class="nav-link">Portfolio</a></li>
