added styles to section Our Team and Our portfolio

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <h1 class="hero-title">Effective Solutions for Your Business</h1>
             <button type="button" class="hero-button">Order Service</button>
         </section>
+
         <section class="advantages">
             <h2 hidden class="advantages-title">Advantages</h2>
             <ul class="advantages-list">
@@ -45,96 +46,99 @@
             <li class="advantages-item"><h3 class="advantages-subtitle">Technologies</h3><p class="advantages-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
             </ul>
         </section>
-        <section>
-            <h2>Our Team</h2>
-            <ul>
-               <li> 
+
+        <section class="our-team">
+            <h2 class="our-team-title">Our Team</h2>
+            <ul class="our-team-list">
+               <li class="our-team-item"> 
                 <img src="./images/image1.jpg"
                 width="264"
                 height="260" 
                 alt="Mark-PD"/>
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
-                </li>
-                <li>
+                    <h3 class="our-team-name">Mark Guerrero</h3>
+                    <p class="our-team-role">Product Designer</p>
+                </li >
+                <li class="our-team-item">
                     <img src="./images/image2.jpg"
                     width="264"
                     height="260"
                     alt="tom-ftdev" />
-                        <h3>Tom Ford</h3>
-                        <p>Frontend Developer</p>
+                        <h3 class="our-team-name">Tom Ford</h3>
+                        <p class="our-team-role">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="our-team-item">
                     <img src="./images/image3.jpg"
                     width="264"
                     height="260"
                     alt="camila-marketing" />
-                        <h3>Camila Garcia</h3>
-                        <p>Marketing</p>
+                        <h3 class="our-team-name">Camila Garcia</h3>
+                        <p class="our-team-role">Marketing</p>
                 </li>
-                <li>
+                <li class="our-team-item">
                     <img src="./images/image4.jpg"
                     width="264"
                     height="260"
                     alt="daniel-uideg" />
-                        <h3>Daniel Wilson</h3>
-                        <p>UI Designer</p>
+                        <h3 class="our-team-name">Daniel Wilson</h3>
+                        <p class="our-team-role">UI Designer</p>
                 </li>
             </ul>
 
         </section>
-        <section>
-            <h2>Our Portfolio</h2>
-            <ul>
-                <li>
+
+        <section class="portfolio">
+            <h2 class="portfolio-title">Our Portfolio</h2>
+            <ul class="portfolio-list">
+                <li class="portfolio-item">
                     <img src="./images/image5.jpg"
                     width="360"
                     height="360"
                     alt="banking-app" />
-                    <h3>Banking App</h3>
-                    <p>App</p>
-                </li>
-                <li>
+                    <h3 class="portfolio-subtitle">Banking App</h3>
+                    <p class="portfolio-text">App</p>
+                </li >
+                <li class="portfolio-item" >
                     <img src="./images/image6.jpg"
                     width="360"
                     height="360"
                     alt="Cashless_Payment" />
-                    <h3>Cashless Payment</h3>
-                    <p>Marketing</p>
+                    <h3 class="portfolio-subtitle">Cashless Payment</h3>
+                    <p class="portfolio-text">Marketing</p>
                 </li>
-                <li>
+                <li class="portfolio-item">
                     <img src="./images/image7.jpg"
                     width="360"
                     height="360"
                     alt="laptop" />
-                    <h3>Meditaion App</h3>
-                    <p>App</p>
+                    <h3 class="portfolio-subtitle">Meditaion App</h3>
+                    <p class="portfolio-text">App</p>
                 </li>
-                <li>
+                <li class="portfolio-item">
                     <img src="./images/image8.jpg"
                     width="360"
                     height="360"
                     alt="car_while"/>
-                    <h3>Taxi Service</h3>
-                    <p>Marketing</p>
+                    <h3 class="portfolio-subtitle">Taxi Service</h3>
+                    <p class="portfolio-text">Marketing</p>
                 </li>
-                <li>
+                <li class="portfolio-item">
                     <img src="./images/image9.jpg"
                     width="360"
                     height="360"
                     alt="phonescreen"/>
-                <h3>Screen Illustrations</h3>
-                <p>Design</p>
+                <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
                 </li>
-                <li>
+                <li class="portfolio-item">
                     <img src="./images/image10.jpg"
                     width="360"
                     height="360"
                     alt="Smilegirl"/>
-                    <h3>Online Courses</h3>
-                    <p>Marketing</p>
+                    <h3 class="portfolio-subtitle">Online Courses</h3>
+                    <p class="portfolio-text">Marketing</p>
                 </li>
             </ul>
+        </section>
 </main>
 
 <footer>
