--- a/index.html
+++ b/index.html
@@ -141,9 +141,11 @@
         </section>
 </main>
 
-<footer>
-    <a href="./index.html">WebStudio</a>
-    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+<footer class="footer">
+    <a href="./index.html" class="logo-footer">
+        <span class="logo-Web">Web</span><span class="logo-studio">studio</span>
+        </a>
+    <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 </body>
 </html>
