--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8"/>
     <meta name="description" content="Webstudio Main Page"/>
     <title>Webstudio</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="CSS/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
@@ -14,19 +13,18 @@
 
     <header class="header">
         <nav class="nav">
-        <a href="./index.html" class="logo">
-        <span class="logo-Web">Web</span><span class="logo-studio">studio</span>
+        <a href="./index.html" class="logo-header">Web<span class="logo-studio">Studio</span>
         </a>
             <ul class="nav-list">
                 <li><a href="#studio" class="nav-link">Studio</a></li>
-                <li><a href="#portfolio"class="nav-link">Portfolio</a></li>
-                <li><a href="#contacts"class="nav-link">Contacts</a></li>
+                <li><a href="#portfolio" class="nav-link">Portfolio</a></li>
+                <li><a href="#contacts" class="nav-link">Contacts</a></li>
             </ul>
         </nav>
         <address class="contacts">
         <ul class="contacts-list">
-               <li> <a href="mailto:info@devstudio.com"class="contact-link">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111"class="contact-link">+11 (000) 111-11-11</a></li>
+               <li> <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="contact-link">+11 (000) 111-11-11</a></li>
                 </ul>
                 </address>
     </header>
@@ -96,7 +94,7 @@
                     alt="banking-app" />
                     <h3 class="portfolio-subtitle">Banking App</h3>
                     <p class="portfolio-text">App</p>
-                </li >
+                </li>
                 <li class="portfolio-item" >
                     <img src="./images/image6.jpg"
                     width="360"
@@ -110,7 +108,7 @@
                     width="360"
                     height="360"
                     alt="laptop" />
-                    <h3 class="portfolio-subtitle">Meditaion App</h3>
+                    <h3 class="portfolio-subtitle">Meditation App</h3>
                     <p class="portfolio-text">App</p>
                 </li>
                 <li class="portfolio-item">
@@ -142,8 +140,7 @@
 </main>
 
 <footer class="footer">
-    <a href="./index.html" class="logo-footer">
-        <span class="logo-Web">Web</span><span class="logo-studio">studio</span>
+    <a href="./index.html" class="logo-footer">Web<span class="logo-studio-footer">Studio</span>
         </a>
     <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
