--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8"/>
     <meta name="description" content="Webstudio Main Page"/>
     <title>Webstudio</title>
-    <link rel="stylesheet" href="CSS/styles.css.css" />
+    <link rel="stylesheet" href="css/styles.css.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="body">
 
     <header class="header">
         <nav class="nav">
@@ -21,7 +21,7 @@
                 <li><a href="#contacts" class="nav-link">Contacts</a></li>
             </ul>
         </nav>
-        <address class="contacts">
+        <address class="contacts" id="contacts">
         <ul class="contacts-list">
                <li> <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
                 <li><a href="tel:+110001111111" class="contact-link">+11 (000) 111-11-11</a></li>
@@ -35,7 +35,7 @@
             <button type="button" class="hero-button">Order Service</button>
         </section>
 
-        <section class="advantages">
+        <section class="advantages" id="studio">
             <h2 hidden class="advantages-title">Advantages</h2>
             <ul class="advantages-list">
             <li class="advantages-item"><h3 class="advantages-subtitle">Strategy</h3><p class="advantages-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
@@ -84,7 +84,7 @@
 
         </section>
 
-        <section class="portfolio">
+        <section class="portfolio" id="portfolio">
             <h2 class="portfolio-title">Our Portfolio</h2>
             <ul class="portfolio-list">
                 <li class="portfolio-item">
