--- a/index.html
+++ b/index.html
@@ -16,9 +16,15 @@
         <a href="./index.html" class="logo-header">Web<span class="logo-studio">Studio</span>
         </a>
             <ul class="nav-list">
-                <li><a href="#studio" class="nav-link">Studio</a></li>
-                <li><a href="#portfolio" class="nav-link">Portfolio</a></li>
-                <li><a href="#contacts" class="nav-link">Contacts</a></li>
+                <li>
+                    <a href="#studio" class="nav-link">Studio</a>
+                </li>
+                <li>
+                    <a href="#portfolio" class="nav-link">Portfolio</a>
+                </li>
+                <li>
+                    <a href="#contacts" class="nav-link">Contacts</a>
+                </li>
             </ul>
         </nav>
         <address class="contacts" id="contacts">
