--- a/index.html
+++ b/index.html
@@ -16,18 +16,12 @@
         <a href="./index.html" class="logo-header">Web<span class="logo-studio">Studio</span>
         </a>
             <ul class="nav-list">
-                <li>
-                    <a href="#studio" class="nav-link">Studio</a>
-                </li>
-                <li>
-                    <a href="#portfolio" class="nav-link">Portfolio</a>
-                </li>
-                <li>
-                    <a href="#contacts" class="nav-link">Contacts</a>
-                </li>
+                <li><a href="./index.html" class="nav-link">Studio</a></li>
+                <li><a href="" class="nav-link">Portfolio</a></li>
+                <li><a href="" class="nav-link">Contacts</a></li>
             </ul>
         </nav>
-        <address class="contacts" id="contacts">
+        <address class="contacts">
         <ul class="contacts-list">
                <li> <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
                 <li><a href="tel:+110001111111" class="contact-link">+11 (000) 111-11-11</a></li>
@@ -41,7 +35,7 @@
             <button type="button" class="hero-button">Order Service</button>
         </section>
 
-        <section class="advantages" id="studio">
+        <section class="advantages">
             <h2 hidden class="advantages-title">Advantages</h2>
             <ul class="advantages-list">
             <li class="advantages-item"><h3 class="advantages-subtitle">Strategy</h3><p class="advantages-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
@@ -90,7 +84,7 @@
 
         </section>
 
-        <section class="portfolio" id="portfolio">
+        <section class="portfolio">
             <h2 class="portfolio-title">Our Portfolio</h2>
             <ul class="portfolio-list">
                 <li class="portfolio-item">
